--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,5 +1,5 @@
 <div style="text-align:right;">
-  <ng-click ng-click="openMainModal()"> 
+  <ng-click ng-click="toggleDelete()"> 
     <img id="mainModalIcon" src="img/_x.png" height="25px" width="25px" style="margin-right:10px;margin-top:5px;margin-bottom:-3px;">
   </ng-click>
   <ng-click ng-click="openMainModal()"> 
@@ -19,7 +19,8 @@
       <ng-click ng-click="logIt(gridsterItem);"> 
         <img id="widgetIcon" src={{widget.icon}}>
         <img id="x-delete" ng-show="deleteEnabled" 
-                           ng-click="deleteWidget(widget)" src=img/xDelete.png">
+                           ng-click="deleteWidget(widget)"
+                           src=img/xDelete.png">
       </ng-click>
     </li>
   </ul>
