--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -94,14 +94,13 @@
     </div>
     </uib-tab>
 
-    <uib-tab class="modal-content" heading="Logout" style="text-align:center;">
+    <uib-tab heading="Logout" style="text-align:center;">
       <h3 style="text-align:center;margin-bottom:25px;">You Sure?</h3>
       <div style="text-align:center;">
         <button type="button" id="logout-button" class="btn btn-danger">Logout</button>
       </div>
     </uib-tab>
   </uib-tabset>
-
 </script>
 
 <script type="text/ng-template" id="authModal.html">
