--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -96,8 +96,8 @@
 
     <uib-tab heading="Logout" style="text-align:center;">
       <h3 style="text-align:center;margin-bottom:25px;">You Sure?</h3>
-      <div style="text-align:center;">
-        <button type="button" id="logout-button" class="btn btn-danger">Logout</button>
+      <div style="text-align:center" ng-controller="dashboardCtrl">
+        <button type="button" id="logout-button" class="btn btn-danger" ng-click="onLogout()">Logout</button>
       </div>
     </uib-tab>
   </uib-tabset>
@@ -106,14 +106,14 @@
 <script type="text/ng-template" id="authModal.html">
 <uib-tabset class="main-modal" active="active" style="overflow:scroll;background-color:black;height:80vh;">
     <uib-tab heading="Login">
-      <form ng-submit="$reg.onSubmit()" class="main-modal-tab">
+      <form ng-submit="$auth.onLogin()" class="main-modal-tab">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$reg.credentials.email">
+          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$auth.credentials.email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$reg.credentials.password">
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$auth.credentials.password">
         </div>
         <button type="submit" class="btn btn-default">Sign in!</button>
       </form>
