--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -120,18 +120,14 @@
     </uib-tab>
 
     <uib-tab heading="Register">
-      <form ng-submit="vm.onSubmit()">
-        <div class="form-group">
-          <label for="name">Full name</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your name" ng-model="vm.credentials.name">
-        </div>
+      <form ng-submit="$auth.onReg()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$auth.credentials.email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$auth.credentials.password">
         </div>
         <button type="submit" class="btn btn-default">Register!</button>
       </form>
