finish refactoring createWidget()

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -53,7 +53,7 @@
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row modal-form-icon-container">
           <div class="col-xs-6 modal-body-form">
-            <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="Paste URL" onfocus="this.placeholder = ''" style="text-align:center;" /><br />
+            <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="Paste URL" onfocus="this.placeholder = ''" style="color:black;text-align:center;" /><br />
             <input type="submit" class="btn btn-info" value="Add Widget" />
           </div>
           <div class="col-xs-6 selected-icon-container">
