--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,33 +1,35 @@
-<button ng-click="openAuthModal()">
-  
-</button>
-
-<ng-click ng-click="toggleDelete()"> 
+<ng-click ng-click="deleteEnabled = !deleteEnabled"> 
   <img id="deleteIcon" src="img/_x.png"
-                       height="25px" width="25px"
+                       height="25px"
+                       width="25px"
                                      style="margin-right:6px;margin-top:5px;">
   <img id="deleteIconRed" src="img/_xRed.png"
-                          height="25px" width="25px"
-                                        ng-show="deleteEnabled"
+                          height="25px"
+                          width="25px"
+                          ng-show="deleteEnabled"
                                         style="margin-right:6px;margin-top:5px;">
 </ng-click>
-</ng-click>
-<ng-click ng-click="toggleDraggable()"> 
+
+<ng-click ng-click="gridOptions.draggable.enabled = !gridOptions.draggable.enabled">
   <img id="lockIcon" src="img/_locked.png"
-                     height="25px" width="25px"
+                     height="25px"
+                     width="25px"
                                    style="margin-right:13px;margin-top:5px;">
   <img id="lockIconRed" src="img/_lockedRed.png"
-                        height="25px" width="25px" ng-show="draggable"
+                        height="25px"
+                        width="25px"
+                        ng-show="gridOptions.draggable.enabled"
                                                    style="margin-right:13px;margin-top:5px;">
 </ng-click>
+
 <ng-click ng-click="openMainModal()"> 
   <img id="openMainModal" src="img/_options.png"
                           height="25px" width="25px"
                                         style="margin-right:21px;margin-top:6px;">
 </ng-click>
-<div style="height:12px;width:100%;">
-  
-</div>
+
+<div style="height:12px;width:100%;"></div>
+
 <div gridster="gridOptions" style="padding-top:40px;">
   <ul>
     <li gridster-item 
@@ -40,8 +42,9 @@
         <img id="x-delete" ng-show="deleteEnabled" 
                            ng-click="deleteWidget(widget)"
                            style="opacity:0.75;"
-                           height="30px" width="30px"
-                                         src="img/_xDelete.png">
+                           height="30px"
+                           width="30px"
+                           src="img/_xDelete.png">
       </ng-click>
     </li>
   </ul>
@@ -53,8 +56,14 @@
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row modal-form-icon-container">
           <div class="col-xs-6 modal-body-form">
-            <input type="text" ng-model="widgetUrl" name="widgetUrl" placeholder="Paste URL" onfocus="this.placeholder = ''" style="color:black;text-align:center;" /><br />
-            <input type="submit" class="btn btn-info" value="Add Widget" />
+            <input type="text" ng-model="widgetUrl"
+                               name="widgetUrl"
+                               placeholder="Paste URL"
+                               onfocus="this.placeholder = ''"
+                                  style="color:black;text-align:center;" />
+            <br />
+            <input type="submit" class="btn btn-info"
+                                 value="Add Widget" />
           </div>
           <div class="col-xs-6 selected-icon-container">
             <img src={{selectedIcon}} class="selected-icon">
@@ -64,7 +73,8 @@
           <ul>
             <li gridster-item="item" ng-repeat="icon in allIcons">
               <ng-click ng-click="selectIcon(icon.icon);"> 
-                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"</ng-click>
+                <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"
+              </ng-click>
             </li>
           </ul>
         </div>
@@ -73,7 +83,7 @@
 
     <uib-tab heading="Export" style="height:100%">
     <div ng-controller="dashboardCtrl" style="height:100%">
-      <div select-text class="" style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
+      <div select-text style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
         {{widgets}}
       </div>
       <h4 style="text-align:center;">
@@ -83,21 +93,29 @@
     </uib-tab>
 
     <uib-tab class="main-modal-tab" heading="Import" style="height:100%;">
-    <div ng-controller="dashboardCtrl">
-      <div style="height:100%;">
-      <textarea ng-model="widgetString" style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;" placeholder="Paste the text you exported here...">
-      </textarea>
-      </div>
-        <div style="text-align:center">
-          <button ng-click="importWidgets()" class="btn btn-danger" style="width:40%">Import</button>
+      <div ng-controller="dashboardCtrl">
+        <div style="height:100%;">
+          <textarea ng-model="widgetString"
+                    placeholder="Paste the text you exported here..."
+                    style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
+          </textarea>
         </div>
-    </div>
+          <div style="text-align:center">
+            <button ng-click="importWidgets()" class="btn btn-danger" style="width:40%">
+              Import
+            </button>
+          </div>
+      </div>
     </uib-tab>
 
     <uib-tab heading="Logout" style="text-align:center;">
       <h3 style="text-align:center;margin-bottom:25px;">You Sure?</h3>
       <div style="text-align:center" ng-controller="dashboardCtrl">
-        <button type="button" id="logout-button" class="btn btn-danger" ng-click="onLogout()">Logout</button>
+        <button type="button" id="logout-button"
+                              class="btn btn-danger"
+                              ng-click="onLogout()">
+          Logout
+        </button>
       </div>
     </uib-tab>
   </uib-tabset>
@@ -109,13 +127,21 @@
       <form ng-submit="$auth.onLogin()" class="main-modal-tab">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$auth.credentials.email">
+          <input type="email" id="email"
+                              class="form-control"
+                              ng-model="$auth.credentials.email"
+                              placeholder="Enter email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$auth.credentials.password">
+          <input type="password" id="password"
+                                 class="form-control"
+                                 ng-model="$auth.credentials.password"
+                                 placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Sign in!</button>
+        <button type="submit" class="btn btn-default">
+          Login
+        </button>
       </form>
     </uib-tab>
 
@@ -123,13 +149,21 @@
       <form ng-submit="$auth.onReg()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="$auth.credentials.email">
+          <input type="email" id="email"
+                              class="form-control"
+                              ng-model="$auth.credentials.email"
+                              placeholder="Enter email">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="$auth.credentials.password">
+          <input type="password" id="password"
+                                 class="form-control"
+                                 ng-model="$auth.credentials.password"
+                                 placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Register</button>
+        <button type="submit" class="btn btn-default">
+          Register
+        </button>
       </form>
     </uib-tab>
 </script>
