integrate icoList on client-side!

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -72,7 +72,7 @@
         <div class="gridster-modal" gridster="gridsterModalOptions">
           <ul>
             <li gridster-item="item" ng-repeat="icon in allIcons">
-              <ng-click ng-click="selectIcon(icon.icon);"> 
+              <ng-click ng-click="selectIcon(icon);"> 
                 <img src={{icon.icon}} class="gridster-modal-icon" alt="widget"
               </ng-click>
             </li>
