--- a/app_client/index.html
+++ b/app_client/index.html
@@ -19,6 +19,7 @@
     <script src="lib/angular-gridster/dist/angular-gridster.min.js"></script>
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <script src="lib/ng-infinite-scoll/ng-infinite-scoll.min.js"></script>
     <script src="app.min.js"></script>
   </body>
 
