--- a/app_client/index.html
+++ b/app_client/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
-    <link rel="stylesheet" href="/dashboard/dashboard.view.css">
+    <link rel="stylesheet" href="/dashboard/dashboard.style.css">
   </head>
 
   <body ng-view>
