make loadMore button work!

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body ng-view>
+    <script src="lib/jquery/jquery-3.2.0.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-sanitize.min.js"></script>
