--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -51,7 +51,7 @@
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<uib-tabset class="main-modal" active="active" style="overflow:scroll;background-color:black;height:80vh;">
+<uib-tabset class="main-modal" active="active" style="overflow:hidden;background-color:black;height:80vh;">
     <uib-tab class="main-modal-tab" heading="Add Widget">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row modal-form-icon-container">
@@ -68,12 +68,15 @@
           <div class="col-xs-6 selected-icon-container">
             <img src={{selectedIcon}} class="selected-icon">
           </div>
+      <div style="width:98%;text-align:right;">
+        <button type="button" class="btn btn-info btn-xs" ng-click="loadAllIcons()" ng-hide="areIconsLoaded" style="">Load All</button>
+      </div>
         </div>
-        <div class="gridster-modal" gridster="gridsterModalOptions">
-          <ul infinite-scroll='loadMoreIcons()'>
-            <li gridster-item="item" ng-repeat="ico in shownIcons">
-              <ng-click ng-click="selectIcon(ico.path);"> 
-                <img src={{icon.path}} class="gridster-modal-icon" alt="widget"
+        <div class="gridster-modal" style="width:98%" gridster="gridsterModalOptions">
+          <ul>
+            <li gridster-item="item" ng-repeat="icon in shownIcons">
+              <ng-click ng-click="selectIcon(icon.path);">
+                <img src="{{icon.path}}" class="gridster-modal-icon" alt="widget">
               </ng-click>
             </li>
           </ul>
@@ -112,13 +115,11 @@
       <h3 style="text-align:center;margin-bottom:25px;">You Sure?</h3>
       <div style="text-align:center" ng-controller="dashboardCtrl">
         <button type="button" id="logout-button"
-                              class="btn btn-success"
-                              ng-click="syncWidgets()">
-          Sync Grids 
-        </button>
-        <button type="button" id="logout-button"
                               class="btn btn-danger"
                               ng-click="onLogout()">
+        <button type="button" id="logout-button"
+                              class="btn btn-success"
+                              ng-click="syncWidgets()">
           Logout
         </button>
       </div>
