wire up ng-hide for loadMore button

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -71,7 +71,7 @@
         </div>
         <div class="gridster-modal" style="width:98%" gridster="gridsterModalOptions">
       <div style="position:fixed;bottom:0;right:25px;z-index:10;">
-        <button type="button" class="btn btn-warning btn-sm" ng-click="loadAllIcons()" ng-hide="areIconsLoaded" style="">Load All Icons</button>
+        <button type="button" class="btn btn-danger btn-sm" ng-click="loadAllIcons()" ng-hide="areIconsLoaded" style="">Load All Icons</button>
       </div>
           <ul>
             <li gridster-item="item" ng-repeat="icon in shownIcons">
