start transfering dashboard style from view to style.css

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,6 +1,6 @@
 <div style="height:21px;width:100%;">
     <ng-click ng-click="toggleDelete()"> 
-      <img id="deleteIcon" src="img/_x.png"
+      <img id="deleteIcon" class="tool-icons" src="img/_x.png"
                            height="20px"
                            width="20px"
                            style="margin-top:5px;">
