--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,36 +1,32 @@
-<div style="height:21px;width:100%;">
+<div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
-      <img id="deleteIcon" class="tool-icons" src="img/_x.png"
-                           height="20px"
-                           width="20px"
-                           style="margin-top:5px;">
-      <img id="deleteIconRed" src="img/_xRed.png"
+      <img id="deleteIcon" class="tool-icon"
+                           src="img/_x.png"
+                           height="20px" width="20px">
+      <img id="deleteIconRed" class="tool-icon" 
+                              src="img/_xRed.png"
                               height="20px"
                               width="20px"
-                              ng-show="deleteEnabled"
-                              style="margin-top:5px;">
+                              ng-show="deleteEnabled">
     </ng-click>
 
     <ng-click ng-click="toggleDraggable()">
       <img id="lockIcon" src="img/_locked.png"
                          height="20px"
-                         width="20px"
-                         style="margin-right:10px;margin-top:5px;">
+                         width="20px">
       <img id="lockIconRed" src="img/_lockedRed.png"
                             height="20px" width="20px"
-                                          ng-show="gridOptions.draggable.enabled"
-                                          style="margin-right:10px;margin-top:5px;">
+                                          ng-show="gridOptions.draggable.enabled">
     </ng-click>
 
     <ng-click ng-click="openMainModal()"> 
       <img id="openMainModal" src="img/_options.png"
-                              height="20px" width="20px"
-                                            style="margin-right:21px;margin-top:5px;">
+                              height="20px" width="20px">
     </ng-click>
 </div>
 
 
-<div gridster="gridOptions" style="padding-top:40px;">
+<div id="grid-container" gridster="gridOptions">
   <ul>
     <li gridster-item 
                             ng-repeat="widget in widgets track by $index"
@@ -41,7 +37,6 @@
         <img id="widgetIcon" src={{widget.icon}}>
         <img id="x-delete" ng-show="deleteEnabled" 
                            ng-click="deleteWidget(widget)"
-                           style="opacity:0.75;"
                            height="30px"
                            width="30px"
                            src="img/_xDelete.png">
@@ -51,16 +46,15 @@
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<uib-tabset class="main-modal" active="active" style="overflow:hidden;background-color:black;height:80vh;">
+<uib-tabset class="main-modal" active="active">
     <uib-tab class="main-modal-tab" heading="Add Widget">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row modal-form-icon-container">
           <div class="col-xs-6 modal-body-form">
-            <input type="text" ng-model="widgetUrl"
+            <input id="widget-url-input" type="text" ng-model="widgetUrl"
                                name="widgetUrl"
                                placeholder="Paste URL"
                                onfocus="this.placeholder = ''"
-                                  style="color:black;text-align:center;" />
             <br />
             <input type="submit" class="btn btn-info"
                                  value="Add Widget" />
@@ -70,7 +64,7 @@
           </div>
         </div>
         <div class="gridster-modal" style="width:98%" gridster="gridsterModalOptions">
-      <div style="position:fixed;bottom:0;right:25px;z-index:10;">
+      <div id="load-all-icons-container">
         <button type="button" class="btn btn-danger btn-sm" ng-click="loadAllIcons()" ng-hide="areIconsLoaded" style="opacity:0.85;">Load All Icons</button>
       </div>
           <ul>
@@ -86,7 +80,7 @@
 
     <uib-tab heading="Export" style="height:100%">
     <div ng-controller="dashboardCtrl" style="height:100%">
-      <div select-text style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
+      <div id="export-widgets-container" select-text>
         {{widgets}}
       </div>
       <h4 style="text-align:center;">
@@ -98,13 +92,12 @@
     <uib-tab class="main-modal-tab" heading="Import" style="height:100%;">
       <div ng-controller="dashboardCtrl">
         <div style="height:100%;">
-          <textarea ng-model="widgetString"
+          <textarea id="import-widgets-textbox" ng-model="widgetString"
                     placeholder="Paste the text you exported here..."
-                    style="background:white;color:black;height:250px;width:80%;margin:40px 80px;overflow: scroll;">
           </textarea>
         </div>
-          <div style="text-align:center">
-            <button ng-click="importWidgets()" class="btn btn-danger" style="width:40%">
+          <div class="text-centered" style="text-align:center">
+            <button id="import-widgets-button" ng-click="importWidgets()" class="btn btn-danger">
               Import
             </button>
           </div>
