--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,62 +1,60 @@
 <div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
       <img id="delete-button" class="tool-icon"
-                           src="img/_x.png"
-                           height="20px" width="20px">
-      <img id="delete-button-active" class="tool-icon" 
-                              src="img/_xRed.png"
-                              height="20px"
-                              width="20px"
-                              ng-show="deleteEnabled">
+                              src="img/_x.png"
+                              height="20px" width="20px">
+      <img id="delete-button-active" class="tool-icon"
+                                     src="img/_xRed.png"
+                                     ng-show="deleteEnabled"
+                                     height="20px" width="20px">
     </ng-click>
 
     <ng-click ng-click="toggleDraggable()">
       <img id="lock-button" src="img/_locked.png"
-                         height="20px"
-                         width="20px">
+                            height="20px" width="20px">
       <img id="lock-button-active" src="img/_lockedRed.png"
-                            height="20px" width="20px"
-                                          ng-show="gridOptions.draggable.enabled">
+                                   ng-show="gridOptions.draggable.enabled"
+                                   height="20px" width="20px">
     </ng-click>
 
     <ng-click ng-click="openMainModal()"> 
       <img id="open-main-modal-button" src="img/_options.png"
-                              height="20px" width="20px">
+                                       height="20px" width="20px">
     </ng-click>
 </div>
 
 
 <div id="grid-container" gridster="gridOptions">
   <ul>
-    <li gridster-item 
-                            ng-repeat="widget in widgets track by $index"
-                            row="widget.row"
-                            col="widget.col"
-                            url="widget.url">
-      <a ng-disabled="urlsEnabled" ng-href="{{urlsEnabled ? widget.url : ''}}">
+    <li gridster-item ng-repeat="widget in widgets track by $index"
+                      row="widget.row"
+                      col="widget.col"
+                      url="widget.url">
+      <a ng-href="{{urlsEnabled ? widget.url : ''}}" ng-disabled="urlsEnabled">
         <img id="widget-icon" src={{widget.icon}}>
         <img id="x-delete" ng-show="deleteEnabled" 
                            ng-click="deleteWidget(widget)"
-                           height="30px"
-                           width="30px"
-                           src="img/_xDelete.png">
+                           src="img/_xDelete.png"
+                           height="30px" width="30px">
       </a>
     </li>
   </ul>
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<uib-tabset id="main-modal" active="active">
+  <uib-tabset id="main-modal" active="active">
     <uib-tab class="main-modal-tab" heading="Add Widget">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row">
           <div class="col-xs-6 create-widget-form">
-            <input id="widget-url-input" type="text" ng-model="widgetUrl"
-                               name="widgetUrl"
-                               placeholder="Paste URL"
-                               onfocus="this.placeholder = ''"
+            <input id="widget-url-input" type="text"
+                                         ng-model="widgetUrl"
+                                         name="widgetUrl"
+                                         placeholder="Paste URL"
+                                         onfocus="this.placeholder = ''"
             <br />
-            <input type="submit" id="submit-create-widget" class="btn btn-info"
+            <input type="submit" id="submit-create-widget"
+                                 class="btn btn-info"
                                  value="Add Widget" />
           </div>
           <div id="selected-icon-container" class="col-xs-6">
@@ -65,12 +63,17 @@
         </div>
         <div id="gridster-modal" gridster="gridsterModalOptions">
       <div id="load-all-icons-button-container">
-        <button type="button" id="load-all-icons-button" class="btn btn-danger btn-sm" ng-click="loadAllIcons()" ng-hide="areIconsLoaded">Load All Icons</button>
+        <button type="button" id="load-all-icons-button"
+                              class="btn btn-danger btn-sm"
+                              ng-click="loadAllIcons()"
+                              ng-hide="areIconsLoaded">
+          Load All Icons
+        </button>
       </div>
           <ul>
             <li gridster-item="item" ng-repeat="icon in shownIcons">
               <ng-click ng-click="selectIcon(icon.path);">
-                <img src="{{icon.path}}" class="gridster-modal-icon" alt="widget">
+                <img src="{{icon.path}}" class="gridster-modal-icon">
               </ng-click>
             </li>
           </ul>
@@ -97,7 +100,9 @@
           </textarea>
         </div>
           <div class="text-centered">
-            <button id="import-widgets-button" ng-click="importWidgets()" class="btn btn-danger">
+            <button id="import-widgets-button"
+                    class="btn btn-danger"
+                    ng-click="importWidgets()">
               Import
             </button>
           </div>
@@ -112,7 +117,7 @@
           Sync Grids 
         </button>
         <button type="button" class="btn btn-warning other-button"
-                              ng-click="syncWidgets()">
+                              ng-click="resetWidgets()">
           Reset Grids
         </button>
         <button type="button" class="btn btn-danger other-button"
@@ -126,7 +131,7 @@
 </script>
 
 <script type="text/ng-template" id="authModal.html">
-<uib-tabset id="auth-modal" active="active">
+  <uib-tabset id="auth-modal" active="active">
     <uib-tab heading="Login">
       <form ng-submit="$auth.onLogin()" class="main-modal-tab">
         <div class="form-group">
@@ -170,4 +175,5 @@
         </button>
       </form>
     </uib-tab>
+  </uib-tabset>
 </script>
