--- a/app_client/index.html
+++ b/app_client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="nerveCenter">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <head>
     <title>NerveCenter</title>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/lib/angular-ui-bootstrap/dist/ui-bootstrap-csp.css">
     <link rel="stylesheet" href="/lib/angular-gridster/dist/angular-gridster.css">
+    <link rel="stylesheet" href="/lib/angular-ui-clock/dist/angular-clock.css">
     <link rel="stylesheet" href="/dashboard/dashboard.style.css">
   </head>
 
@@ -21,6 +23,7 @@
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="lib/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="lib/ng-infinite-scroll/ng-infinite-scroll.min.js"></script>
+    <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
     <script src="app.min.js"></script>
   </body>
 
