--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,24 +1,25 @@
-
 <div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
       <img id="delete-button" class="tool-icon"
-                              src="{{deleteIcon}}"
-                              height="{{toolIconSize}}"
-                              width="{{toolIconSize}}">
+                              src="img/_x.png"
+                              height="20px" width="20px">
+      <img id="delete-button-active" class="tool-icon"
+                                     src="img/_xRed.png"
+                                     ng-show="deleteEnabled"
+                                     height="20px" width="20px">
     </ng-click>
 
     <ng-click ng-click="toggleDraggable()">
-      <img id="lock-button" class="tool-icon"
-                            src="{{lockIcon}}"
-                            height="{{toolIconSize}}"
-                            width="{{toolIconSize}}">
+      <img id="lock-button" src="img/_locked.png"
+                            height="20px" width="20px">
+      <img id="lock-button-active" src="img/_lockedRed.png"
+                                   ng-show="gridOptions.draggable.enabled"
+                                   height="20px" width="20px">
     </ng-click>
 
     <ng-click ng-click="openMainModal()"> 
-      <img id="open-main-modal-button" class="tool-icon"
-                                       src="img/_options.png"
-                                       height="{{toolIconSize}}"
-                                       width="{{toolIconSize}}">
+      <img id="open-main-modal-button" src="img/_options.png"
+                                       height="20px" width="20px">
     </ng-click>
 </div>
 
@@ -37,20 +38,12 @@
                            height="30px" width="30px">
       </a>
     </li>
-    <li gridster-item sizeX="1" row="3" col="0">
-    <div style="style=width:50%;">
-    <div style="style=width:2px;margin:0 auto;">
-      <ds-widget-clock theme='dark' style="background-color:blue;"show-analog digital-format="'ss:hh:mm a'"></ds-widget-clock>
-
-    </div>
-    </div>
-    </li>
   </ul>
 </div>
 
 <script type="text/ng-template" id="mainModal.html">
-<uib-tabset id="main-modal" active="active">
-    <uib-tab class="modal-tab" heading="Add Widget">
+  <uib-tabset id="main-modal" active="active">
+    <uib-tab class="main-modal-tab" heading="Add Widget">
       <form ng-submit="createWidget()" ng-controller="dashboardCtrl">
         <div class="row">
           <div class="col-xs-6 create-widget-form">
@@ -99,7 +92,7 @@
     </div>
     </uib-tab>
 
-    <uib-tab class="modal-tab full-height" heading="Import">
+    <uib-tab class="main-modal-tab full-height" heading="Import">
       <div ng-controller="dashboardCtrl">
         <div class="full-height">
           <textarea id="import-widgets-textbox" ng-model="widgetString"
@@ -116,7 +109,7 @@
       </div>
     </uib-tab>
 
-    <uib-tab class="modal-tab text-centered full-height" heading="Other">
+    <uib-tab class="text-centered full-height" heading="Other">
       <div ng-controller="dashboardCtrl">
         <div id="other-buttons-container" class="full-height">
         <button type="button" class="btn btn-success other-button"
@@ -138,9 +131,9 @@
 </script>
 
 <script type="text/ng-template" id="authModal.html">
-<uib-tabset id="auth-modal" active="active">
+  <uib-tabset id="auth-modal" active="active">
     <uib-tab heading="Login">
-      <form ng-submit="$auth.onLogin()" class="modal-tab">
+      <form ng-submit="$auth.onLogin()" class="main-modal-tab">
         <div class="form-group">
           <label for="email">Email address</label>
           <input type="email" id="email"
@@ -155,14 +148,14 @@
                                  ng-model="$auth.credentials.password"
                                  placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-default">
           Login
         </button>
       </form>
     </uib-tab>
 
     <uib-tab heading="Register">
-      <form ng-submit="$auth.onReg()" class="modal-tab">
+      <form ng-submit="$auth.onReg()">
         <div class="form-group">
           <label for="email">Email address</label>
           <input type="email" id="email"
@@ -177,7 +170,7 @@
                                  ng-model="$auth.credentials.password"
                                  placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-success">
+        <button type="submit" class="btn btn-default">
           Register
         </button>
       </form>
