--- a/app_client/index.html
+++ b/app_client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="nerveCenter">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <head>
     <title>NerveCenter</title>
