add angular-clock dependency

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,3 +1,5 @@
+<ds-widget-clock theme="dark" show-secs="true" digital-format="'hh:mm:ss a'"></ds-widget-clock>
+
 <div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
       <img id="delete-button" class="tool-icon"
