--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,4 +1,8 @@
-<ds-widget-clock theme="dark" show-secs="true" digital-format="'hh:mm:ss a'"></ds-widget-clock>
+<div style="style=width:200px;margin:0 auto;">
+  <!-- <ds-widget-clock theme="dark" show-digital="false" show-analog="false"></ds-widget-clock> -->
+  <ds-widget-clock theme='dark' digital-format="ss-mm-HH"></ds-widget-clock>
+
+</div>
 
 <div id="tool-icon-container" >
     <ng-click ng-click="toggleDelete()"> 
