correct angular-clock tag syntax

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -1,6 +1,6 @@
 <div style="style=width:200px;margin:0 auto;">
   <!-- <ds-widget-clock theme="dark" show-digital="false" show-analog="false"></ds-widget-clock> -->
-  <ds-widget-clock theme='dark' digital-format="ss-mm-HH"></ds-widget-clock>
+  <ds-widget-clock theme='dark' show-analog digital-format="'ss:hh:mm a'"></ds-widget-clock>
 
 </div>
 
