make clickWiget directive work

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -41,7 +41,7 @@
     <!--     <ds-widget-clock show-analog theme='dark'></ds-widget-clock> -->
     <!--   </div> -->
     <!-- </div> -->
-    <div ng-bind-html="clockWidget"></div>
+    <clock-widget></clock-widget>
     </li>
   </ul>
 </div>
