fix 'other' tab button colors

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -108,7 +108,7 @@
                               ng-click="syncWidgets()">
           Sync Grids 
         </button>
-        <button type="button" class="btn btn-warning other-button"
+        <button type="button" class="btn btn-info other-button"
                               ng-click="resetWidgets()">
           Reset Grids
         </button>
