continue adding dynamic render ability with ng-class

--- a/app_client/dashboard/dashboard.view.html
+++ b/app_client/dashboard/dashboard.view.html
@@ -28,7 +28,16 @@
                       row="widget.row"
                       col="widget.col"
                       type="widget.type">
-        <div class="{{widget.type}}"></div>
+        <div class="clock-widget"></div> 
+        <!-- <div ng-switch> -->
+        <!-- <div ng-switch-when="widget.type == 'link-widget'"> -->
+        <!--   <link-widget></link-widget> --> 
+        <!-- </div> -->
+        <!-- <div ng-switch-when="widget.type == 'clock-widget'"> -->
+        <!--   <clock-widget></clock-widget> --> 
+        <!-- </div> -->
+        <!-- </div> -->
+        <!-- <div class="{{widget.type}}"></div> -->
       </div>
     </li>
   </ul>
